bluec-tests/tests/invalid/types_fn_pointer/invalid_initializer5.c
int (*fn)(void) = &fn;

int main(void) {
    return 0;
}
